k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: dev
  labels:
    app: order-service    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: gcr.io/imre-experiment/order-service:v1.0.3
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            # this port for liveness/readiness probe is different than the `containerPort` defined above,
            # so the kubelet can perform health check without being intercepted by istio-proxy
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /
            # this port for liveness/readiness probe is different than the `containerPort` defined above,
            # so the kubelet can perform health check without being intercepted by istio-proxy
            port: 8080
          # set readiness delay > liveness delay, because readiness can be longer due to application's initialization phase (e.g: cache building, etc)
          initialDelaySeconds: 5
          periodSeconds: 60          
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: dev
  labels:
    app: payment-service    
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service
        image: gcr.io/imre-experiment/payment-service:v1.0.3
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            # this port for liveness/readiness probe is different than the `containerPort` defined above,
            # so the kubelet can perform health check without being intercepted by istio-proxy
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /
            # this port for liveness/readiness probe is different than the `containerPort` defined above,
            # so the kubelet can perform health check without being intercepted by istio-proxy
            port: 8080
          # set readiness delay > liveness delay, because readiness can be longer due to application's initialization phase (e.g: cache building, etc)
          initialDelaySeconds: 5
          periodSeconds: 60                  

# Baca config
